[package]
name = "yo"
version = "0.1.0"
authors = ["mtwtkman <yo@mtwtkman.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
actix-session = "0.2"
actix-files = "0.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.6"
openssl = { version = "0.10", features = ["v110"] }
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
validator = "0.9"
validator_derive = "0.9"
rand = "0.7"
base64 = "0.10"
listenfd = "0.3"
actix-redis = { vrsion = "0.6", features = ["web"] }
serde_cbor = "0.10"
sha2 = "0.8"